--- a/src/components/spComponents/Table/ServiceProviderTable.css
+++ b/src/components/spComponents/Table/ServiceProviderTable.css
@@ -1,3 +1,11 @@
 .my-temp-class {
     min-height: '500px !important';
   }
+
+.MuiTableCell-root{
+  .MuiToolbar-root{
+    .MuiTablePagination-selectLabel, .MuiInputBase-root, .MuiTablePagination-displayedRows{
+      display: none;
+    }
+}
+}
